docs: redesign guides around newcomer workflows